Atualização para o mobile

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <body class="bg-gray-100">
 
  <!-- Items navbar -->
- <nav class="flex justify-between items-center h-16 p-4 bg-transparent">
+ <nav class=" justify-between items-center h-16 p-4 bg-transparent hidden md:flex">
     <div class="flex-grow flex justify-center space-x-4">
         <div class="mb-4 sm:mb-0">
             <a href="../assets/Currículo de Arthur Pimentel Soares.pdf" target="_blank">
@@ -57,16 +57,30 @@
         <!-- Ícones das redes sociais -->
         <a href="https://www.linkedin.com/in/arthur-pimentel-58623221b/" target="_blank" class="transform transition-transform duration-300 hover:scale-105 hover:text-blue-800">
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="h-6 w-6" viewBox="0 0 24 24">
-                <path d="M22.225 0h-20.45C.994 0 0 .994 0 2.225v19.55C0 23.006.994 24 2.225 24h20.45C23.006 24 24 23.006 24 22.225V2.225C24 .994 23.006 0 22.225 0zm-14.45 20.452h-3.44v-11.3h3.44v11.3zm-1.725-12.89c-1.095 0-1.78-.757-1.78-1.7 0-.938.69-1.697 1.748-1.697.975 0 1.78.758 1.78 1.7 0 .943-.69 1.697-1.748 1.697zm15.16 12.89h-3.44v-5.759c0-1.376-.028-3.15-1.92-3.15-1.92 0-2.214 1.487-2.214 3.025v6.884h-3.44v-11.3h3.44v1.54h.049c.48-.91 1.653-1.86 3.397-1.86 3.623 0 4.295 2.39 4.295 5.5v6.116z"/>
+                <path d="M22.225 0h-20.45C.994 0 0 .994 0 2.225v19.55C0 23.006.994 24 2.
+                225 24h20.45C23.006 24 24 23.006 24 22.225V2.225C24 .994 23.006 0 22.225 0zm-
+                14.45 20.452h-3.44v-11.3h3.44v11.3zm-1.725-12.89c-1.095 0-1.78-.757-1.78-1.7 0-.938.
+                69-1.697 1.748-1.697.975 0 1.78.758 1.78 1.7 0 .943-.69 1.697-1.748 1.697zm15.16 12.89h-
+                3.44v-5.759c0-1.376-.028-3.15-1.92-3.15-1.92 0-2.214 1.487-2.214 3.025v6.884h-3.44v-11.3h3
+                .44v1.54h.049c.48-.91 1.653-1.86 3.397-1.86 3.623 0 4.295 2.39 4.295 5.5v6.116z"/>
             </svg>
         </a>
         <a href="https://github.com/ArthurSoares22" target="_blank" class="transform transition-transform duration-300 hover:scale-105 hover:text-gray-500">
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="h-6 w-6" viewBox="0 0 24 24">
-                <path d="M12 0C5.373 0 0 5.373 0 12c0 5.304 3.438 9.8 8.207 11.387.6.111.82-.261.82-.577 0-.286-.01-1.045-.016-2.052-3.338.725-4.046-1.612-4.046-1.612-.546-1.38-1.33-1.749-1.33-1.749-1.085-.742.083-.726.083-.726 1.203.085 1.838 1.236 1.838 1.236 1.067 1.826 2.8 1.298 3.48.992.108-.774.417-1.298.762-1.597-2.665-.303-5.466-1.332-5.466-5.93 0-1.312.468-2.384 1.235-3.219-.123-.303-.535-1.527.116-3.176 0 0 1.008-.323 3.303 1.231A11.529 11.529 0 0 1 12 3.131c1.026.004 2.052.138 3.025.405 2.295-1.554 3.303-1.231 3.303-1.231.651 1.649.239 2.873.117 3.176.77.835 1.234 1.907 1.234 3.219 0 4.607-2.806 5.626-5.472 5.921.43.373.814 1.104.814 2.224 0 1.605-.014 2.899-.014 3.287 0 .318.218.693.824.576A12.008 12.008 0 0 0 24 12c0-6.627-5.373-12-12-12z"/>
+                <path d="M12 0C5.373 0 0 5.373 0 12c0 5.304 3.438 9.8 8.207 11.387.6.111.82-.261.82-.577 0-
+                .286-.01-1.045-.016-2.052-3.338.725-4.046-1.612-4.046-1.612-.546-1.38-1.33-1.749-1.33-1.749-1.085-.
+                742.083-.726.083-.726 1.203.085 1.838 1.236 1.838 1.236 1.067 1.826 2.8 1.298 3.48.992.108-.774.
+                417-1.298.762-1.597-2.665-.303-5.466-1.332-5.466-5.93 0-1.312.468-2.384 1.235-3.219-.123-.303-.535-
+                1.527.116-3.176 0 0 1.008-.323 3.303 1.231A11.529 11.529 0 0 1 12 3.131c1.026.004 2.052.138 3.025.405 
+                2.295-1.554 3.303-1.231 3.303-1.231.651 1.649.239 2.873.117 3.176.77.835 1.234 1.907 1.234 3.219 0 4.607-2.
+                806 5.626-5.472 5.921.43.373.814 1.104.814 2.224 0 1.605-.014 2.899-.014 3.287 0 
+                .318.218.693.824.576A12.008 12.008 0 0 0 24 12c0-6.627-5.373-12-12-12z"/>
             </svg>
         </a>
-        <a href="https://www.instagram.com/pimentelarthurr_/" target="_blank" class="transform transition-transform duration-300 hover:scale-105 hover:text-pink-600">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
+        <a href="https://www.instagram.com/pimentelarthurr_/" target="_blank" class="transform transition-transform duration-300 
+        hover:scale-105 hover:text-pink-600">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" 
+            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram">
                 <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
                 <path d="M16 11.5a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0z"></path>
                 <line x1="17.5" y1="6.5" x2="17.5" y2="6.5"></line>
@@ -75,9 +89,36 @@
     </div>
 </nav>
 
+<!-- Navbar Mobile -->
+<nav class="bg-white shadow-md fixed w-full z-10 top-0 left-0 md:hidden">
+    <div class="container mx-auto px-4 flex justify-between items-center py-4">
+      <!-- Logo -->
+      <a href="#" class="text-2xl font-bold text-gray-700 font-rubik">Meu Portifólio</a>
+  
+      <!-- Ícone do menu mobile -->
+      <div>
+        <button id="menu-btn" class="text-gray-600 hover:text-gray-700 focus:outline-none">
+          <!-- Ícone do menu hamburguer -->
+          <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+    </div>
+  
+    <!-- Menu Mobile (Dropdown) -->
+    <div id="mobile-menu" class="hidden bg-white">
+      <a href="#home" class="block py-2 px-4 text-gray-700 hover:bg-gray-100 transition duration-300 ease-in-out">Início</a>
+      <a href="#sobre" class="block py-2 px-4 text-gray-700 hover:bg-gray-100 transition duration-300 ease-in-out">Sobre</a>
+      <a href="#projetos" class="block py-2 px-4 text-gray-700 hover:bg-gray-100 transition duration-300 ease-in-out">Projetos</a>
+      <a href="#contatos" class="block py-2 px-4 text-gray-700 hover:bg-gray-100 transition duration-300 ease-in-out">Contatos</a>
+    </div>
+  </nav>
+
+  
 
   <!-- home -->
-  <section id="home" class="w-full flex flex-col sm:flex-row">
+  <section id="home" class="w-full flex flex-col sm:flex-row sm: mt-16">
     <div class="w-full sm:w-1/2 flex flex-col items-center sm:items-start justify-center p-4"> <!-- mudando items-center para sm:items-start -->
         <h1 class="text-6xl font-bold text-gray-700">Olá, meu nome é Arthur!</h1>
         <h3 class="text-4xl font-semibold mt-2 text-left">Sou desenvolvedor front-end</h3> <!-- Adicionando text-left -->
@@ -250,12 +291,20 @@
             <!-- Ícones das redes sociais -->
             <a href="https://www.linkedin.com/in/arthur-pimentel-58623221b/" target="_blank" class="hover:text-blue-800">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="h-6 w-6" viewBox="0 0 24 24">
-                    <path d="M22.225 0h-20.45C.994 0 0 .994 0 2.225v19.55C0 23.006.994 24 2.225 24h20.45C23.006 24 24 23.006 24 22.225V2.225C24 .994 23.006 0 22.225 0zm-14.45 20.452h-3.44v-11.3h3.44v11.3zm-1.725-12.89c-1.095 0-1.78-.757-1.78-1.7 0-.938.69-1.697 1.748-1.697.975 0 1.78.758 1.78 1.7 0 .943-.69 1.697-1.748 1.697zm15.16 12.89h-3.44v-5.759c0-1.376-.028-3.15-1.92-3.15-1.92 0-2.214 1.487-2.214 3.025v6.884h-3.44v-11.3h3.44v1.54h.049c.48-.91 1.653-1.86 3.397-1.86 3.623 0 4.295 2.39 4.295 5.5v6.116z"/>
+                    <path d="M22.225 0h-20.45C.994 0 0 .994 0 2.225v19.55C0 23.006.994 24 2.225 24h20.45C23.006 24 24 23.006 24 
+                    22.225V2.225C24 .994 23.006 0 22.225 0zm-14.45 20.452h-3.44v-11.3h3.44v11.3zm-1.725-12.89c-1.095 0-1.78-.757-1.78-1.7 0-.938.69-1.697 1.748-1.697.975 0 1.78.758 1.78 1.7 0 .943-.69 1.697-1.748 1.697zm15.16 12.89h-3.44v-5.759c0-1.376-.028-3.15-1.92-3.15-1.92 0-2.214 1.487-2.214 3.025v6.884h-3.44v-11.3h3.44v1.54h.049c.48-.91 1.653-1.86 3.397-1.86 3.623 0 4.295 2.39 4.295 5.5v6.116z"/>
                 </svg>
             </a>
             <a href="https://github.com/ArthurSoares22" target="_blank" class="hover:text-gray-500">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="h-6 w-6" viewBox="0 0 24 24">
-                    <path d="M12 0C5.373 0 0 5.373 0 12c0 5.304 3.438 9.8 8.207 11.387.6.111.82-.261.82-.577 0-.286-.01-1.045-.016-2.052-3.338.725-4.046-1.612-4.046-1.612-.546-1.38-1.33-1.749-1.33-1.749-1.085-.742.083-.726.083-.726 1.203.085 1.838 1.236 1.838 1.236 1.067 1.826 2.8 1.298 3.48.992.108-.774.417-1.298.762-1.597-2.665-.303-5.466-1.332-5.466-5.93 0-1.312.468-2.384 1.235-3.219-.123-.303-.535-1.527.116-3.176 0 0 1.008-.323 3.303 1.231A11.529 11.529 0 0 1 12 3.131c1.026.004 2.052.138 3.025.405 2.295-1.554 3.303-1.231 3.303-1.231.651 1.649.239 2.873.117 3.176.77.835 1.234 1.907 1.234 3.219 0 4.607-2.806 5.626-5.472 5.921.43.373.814 1.104.814 2.224 0 1.605-.014 2.899-.014 3.287 0 .318.218.693.824.576A12.008 12.008 0 0 0 24 12c0-6.627-5.373-12-12-12z"/>
+                    <path d="M12 0C5.373 0 0 5.373 0 12c0 5.304 3.438 9.8 8.207 11.387.6.111.82-.
+                    261.82-.577 0-.286-.01-1.045-.016-2.052-3.338.725-4.046-1.612-4.046-1.612-.546-1.38-1.33-1
+                    .749-1.33-1.749-1.085-.742.083-.726.083-.726 1.203.085 1.838 1.236 1.838 1.236 1.067 1.826 
+                    2.8 1.298 3.48.992.108-.774.417-1.298.762-1.597-2.665-.303-5.466-1.332-5.466-5.93 0-1.312.468
+                    -2.384 1.235-3.219-.123-.303-.535-1.527.116-3.176 0 0 1.008-.323 3.303 1.231A11.529 11.529 0 0 1 
+                    12 3.131c1.026.004 2.052.138 3.025.405 2.295-1.554 3.303-1.231 3.303-1.231.651 1.649.239 2.873.117 3.176.77
+                    .835 1.234 1.907 1.234 3.219 0 4.607-2.806 5.626-5.472 5.921.43.373.814 1.104.814 2.224 0 1.605-.014 2.899-.014 
+                    3.287 0 .318.218.693.824.576A12.008 12.008 0 0 0 24 12c0-6.627-5.373-12-12-12z"/>
                 </svg>
             </a>
             <a href="https://www.instagram.com/pimentelarthurr_/" target="_blank" class="hover:text-pink-600">
@@ -269,5 +318,5 @@
         </div>
     </div>
 </footer>
-<script src="../src/script.js"></script>
+<script src="/src/script.js"></script>
 </body>
